@@ -5,23 +5,16 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.StringJoiner;
 
 import org.jabref.JabRefExecutorService;
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
 import org.jabref.gui.util.StreamGobbler;
-import org.jabref.preferences.JabRefPreferences;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import static org.jabref.preferences.JabRefPreferences.ADOBE_ACROBAT_COMMAND;
-import static org.jabref.preferences.JabRefPreferences.USE_PDF_READER;
 
 public class Linux implements NativeDesktop {
 
@@ -73,7 +66,7 @@ public class Linux implements NativeDesktop {
     public void openFolderAndSelectFile(Path filePath) throws IOException {
         String desktopSession = System.getenv("DESKTOP_SESSION");
 
-        String cmd = "xdg-open " + filePath.toAbsolutePath().getParent().toString(); //default command
+        String cmd = "xdg-open " + filePath.toAbsolutePath().getParent().toString(); // default command
 
         if (desktopSession != null) {
             desktopSession = desktopSession.toLowerCase(Locale.ROOT);
@@ -109,29 +102,12 @@ public class Linux implements NativeDesktop {
     }
 
     @Override
-    public void openPdfWithParameters(String filePath, List<String> parameters) throws IOException {
-
-        String application;
-        if (JabRefPreferences.getInstance().get(USE_PDF_READER).equals(JabRefPreferences.getInstance().get(ADOBE_ACROBAT_COMMAND))) {
-            application = "acroread";
-
-            StringJoiner sj = new StringJoiner(" ");
-            sj.add(application);
-            parameters.forEach((param) -> sj.add(param));
-
-            openFileWithApplication(filePath, sj.toString());
-        } else {
-            openFile(filePath, "PDF");
-        }
-    }
-
-    @Override
     public String detectProgramPath(String programName, String directoryName) {
         return programName;
     }
 
     @Override
     public Path getApplicationDirectory() {
-        return Paths.get("/usr/lib/");
+        return Path.of("/usr/lib/");
     }
 }
