@@ -3,6 +3,7 @@ package org.jabref.gui.importer.actions;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
@@ -42,11 +43,11 @@ public class OpenDatabaseAction extends SimpleCommand {
     // List of actions that may need to be called after opening the file. Such as
     // upgrade actions etc. that may depend on the JabRef version that wrote the file:
     private static final List<GUIPostOpenAction> POST_OPEN_ACTIONS = Arrays.asList(
-                                                                                   // Migrations:
-                                                                                   // Warning for migrating the Review into the Comment field
-                                                                                   new MergeReviewIntoCommentAction(),
-                                                                                   // Check for new custom entry types loaded from the BIB file:
-                                                                                   new CheckForNewEntryTypesAction());
+            // Migrations:
+            // Warning for migrating the Review into the Comment field
+            new MergeReviewIntoCommentAction(),
+            // Check for new custom entry types loaded from the BIB file:
+            new CheckForNewEntryTypesAction());
 
     private final JabRefFrame frame;
     private final DialogService dialogService;
@@ -84,7 +85,6 @@ public class OpenDatabaseAction extends SimpleCommand {
     }
 
     /**
-     *
      * @return Path of current panel database directory or the working directory
      */
     private Path getInitialDirectory() {
@@ -102,7 +102,7 @@ public class OpenDatabaseAction extends SimpleCommand {
      * @param file the file, may be null or not existing
      */
     public void openFile(Path file, boolean raisePanel) {
-        openFiles(Arrays.asList(file), raisePanel);
+        openFiles(new ArrayList<>(List.of(file)), raisePanel);
     }
 
     /**
@@ -116,12 +116,12 @@ public class OpenDatabaseAction extends SimpleCommand {
         int removed = 0;
 
         // Check if any of the files are already open:
-        for (Iterator<Path> iterator = filesToOpen.iterator(); iterator.hasNext();) {
+        for (Iterator<Path> iterator = filesToOpen.iterator(); iterator.hasNext(); ) {
             Path file = iterator.next();
             for (int i = 0; i < frame.getTabbedPane().getTabs().size(); i++) {
                 BasePanel basePanel = frame.getBasePanelAt(i);
                 if ((basePanel.getBibDatabaseContext().getDatabasePath().isPresent())
-                    && basePanel.getBibDatabaseContext().getDatabasePath().get().equals(file)) {
+                        && basePanel.getBibDatabaseContext().getDatabasePath().get().equals(file)) {
                     iterator.remove();
                     removed++;
                     // See if we removed the final one. If so, we must perhaps
@@ -141,17 +141,16 @@ public class OpenDatabaseAction extends SimpleCommand {
             final List<Path> theFiles = Collections.unmodifiableList(filesToOpen);
 
             for (Path theFile : theFiles) {
-                //This method will execute the concrete file opening and loading in a background thread
+                // This method will execute the concrete file opening and loading in a background thread
                 openTheFile(theFile, raisePanel);
             }
 
             for (Path theFile : theFiles) {
                 frame.getFileHistory().newFile(theFile);
             }
-        }
-        // If no files are remaining to open, this could mean that a file was
-        // already open. If so, we may have to raise the correct tab:
-        else if (toRaise != null) {
+        } else if (toRaise != null) {
+            // If no files are remaining to open, this could mean that a file was
+            // already open. If so, we may have to raise the correct tab:
             frame.showBasePanel(toRaise);
         }
     }
@@ -169,10 +168,9 @@ public class OpenDatabaseAction extends SimpleCommand {
                               OpenDatabaseAction.performPostOpenActions(panel, result);
                           })
                           .onFailure(ex -> dialogService.showErrorDialogAndWait(Localization.lang("Connection error"),
-                                                                                           ex.getMessage() + "\n\n" + Localization.lang("A local copy will be opened.")))
+                                  ex.getMessage() + "\n\n" + Localization.lang("A local copy will be opened.")))
                           .executeWith(Globals.TASK_EXECUTOR);
         }
-
     }
 
     private ParserResult loadDatabase(Path file) throws Exception {
@@ -182,28 +180,26 @@ public class OpenDatabaseAction extends SimpleCommand {
 
         Globals.prefs.put(JabRefPreferences.WORKING_DIRECTORY, fileToLoad.getParent().toString());
 
-        if (BackupManager.checkForBackupFile(fileToLoad)) {
+        if (BackupManager.backupFileDiffers(fileToLoad)) {
             BackupUIManager.showRestoreBackupDialog(dialogService, fileToLoad);
         }
 
         ParserResult result = OpenDatabase.loadDatabase(fileToLoad.toString(),
-                                                        Globals.prefs.getImportFormatPreferences(), Globals.getFileUpdateMonitor());
+                Globals.prefs.getImportFormatPreferences(), Globals.getFileUpdateMonitor());
 
         if (result.getDatabase().isShared()) {
             try {
                 new SharedDatabaseUIManager(frame).openSharedDatabaseFromParserResult(result);
             } catch (SQLException | DatabaseNotSupportedException | InvalidDBMSConnectionPropertiesException |
-                     NotASharedDatabaseException e) {
+                    NotASharedDatabaseException e) {
                 result.getDatabaseContext().clearDatabaseFile(); // do not open the original file
                 result.getDatabase().clearSharedDatabaseID();
                 LOGGER.error("Connection error", e);
 
                 throw e;
-
             }
         }
         return result;
-
     }
 
     private BasePanel addNewDatabase(ParserResult result, final Path file, boolean raisePanel) {
@@ -214,6 +210,5 @@ public class OpenDatabaseAction extends SimpleCommand {
         BasePanel basePanel = new BasePanel(frame, BasePanelPreferences.from(Globals.prefs), result.getDatabaseContext(), ExternalFileTypes.getInstance());
         frame.addTab(basePanel, raisePanel);
         return basePanel;
-
     }
 }
